final fix commit

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "App",
-    "name": "Mon Application",
+    "name": "Barcad'ia",
     "icons": [
         {
             "src": "images/icon-192x192.png",
